# social-sdk-wrapper

./: .gitignore  CMakeLists.txt  main.js  package-lock.json  package.json  social-sdk.podspec  social.i  social.ini  swig-config.js
android/: build.gradle
android/cpp/: FacebookGamingShare.cpp  FacebookGamingShare.h  FacebookShare.cpp  FirebaseDynamicLinks.cpp  NativeShare.cpp  ScheduledNotification.cpp  TournamentController.cpp
bindings/manual/: ShareListenerJS.cpp  ShareListenerJS.h  SocialJSHelper.cpp  SocialJSHelper.h  TournamentListenerJS.cpp  TournamentListenerJS.h
ios/: CMakeLists.txt  FacebookGamingShareBridge.hpp  FacebookGamingShareBridge.mm  FacebookShare.mm  NativeShare.mm  ScheduledNotification.mm  TournamentBridge.hpp  TournamentBridge.mm  TournamentController.mm  social-sdk-Bridging-Header.h
ios/social-sdk/: CPFramework.sh  ContextUpdateDelegate.swift  FacebookGamingShareImpl.swift  FacebookShareImpl.swift  GamingPayloadDelegateImpl.swift  TournamentDelegate.swift
scripts/: CanvasUtils.ts  ScheduledNotifApi.ts  ShareApi.ts  TournamentAPI.ts
scripts/instant/: InstantImageGenerator.ts  InstantNotifApi.ts  InstantSafeTournament.ts  InstantSharer.ts  InstantTournament.ts
scripts/native/: NativeImageGenerator.ts  NativeNotifApi.ts  NativeShareWrapper.ts  NativeSharer.ts  NativeTournament.ts  NativeTournamentWrapper.ts  types.ts
scripts/types/: IContext.ts  IImageDataGenerator.ts  INotification.ts  IShare.ts  IShareContent.ts  IShareController.ts  ITournament.ts  definitions.ts
scripts/web/: WebImageGenerator.ts  WebNotifApi.ts  WebSharer.ts  WebTournament.ts
socialsdk/: Android.mk  FacebookShare.h  IShareListenerJS.h  ITournamentListenerJS.h  NativeShare.h  ScheduledNotification.h  TournamentController.h
socialsdk/dynamic_links/: FirebaseDynamicLinks.h  FirebaseDynamicLinksReceiver.cpp  (+3 more)
(+23 files in other folders)
